

Änderungen
----------
v0.8.2 (??.10.2010)
 * 52: Exception in league table alltime fixed.

v0.8.1 (17.10.2010)
 * Leaguetable: new head to head mode. That means the direct match decides the position if points are equals. Set this by TS: leaguetable.compareMethod = compareTeamsH2H. Thanks to Christophe Denis!
 * #49: number of matches is used to calculate league table
 * #48: Template for match status -1 included 
 * #47: Result calculation changed

v0.8.0 (21.10.2010)
 * MatchTable: Output markers for profile data in filter items changed
 * Leaguetable in match report: TS config path fixed
 * ProfileView: Example subparts for player and referee statistics with t3sportstats

v0.7.8 (05.10.2010)
 * It is possible to show team notes in profile view. Link is build in team view.
 * Filter class for matchtable
 * Display filter data for players and referees in matchtable
 * #40: New constants for first picture in team and profile details view

v0.7.7 (26.09.2010)
 * Character browser in stadium list
 * Profile list: TS-path for character browser changed to profilelist.profile.charbrowser
 * Profile list: HTML-part for charbrowser must be within subpart ###PROFILES###
 * It is possible to show player stats in ProfileView

v0.7.6 (16.09.2010)
 * Two new markers for profiles: ###PROFILE_DBNAME### and ###PROFILE_DBNAMEREV### with support for stage name
 * #42: remove marker ###MATCH_LEAGUETABLE###
 * Bugfixes for alltime table

v0.7.5 (03.09.2010)
 * All references to extensions lib/div removed.
 * New chart builder class from rn_base used

v0.7.4 (17.07.2010)
 * Show goals own for opponent team
 * Draw map icons with GIFBuilder
 * Distance calculation for clubs and stadiums

v0.7.3 (04.07.2010)
 * Country integration for stadiums and clubs.

v0.7.2 (03.07.2010)
 * It is possible to output all teams of a club.
 * T3-Register T3SPORTS_GROUP in match is filled preferred with teams agegroup
 * Bugfix: club logos without DAM
 * New view stadium list with GoogleMaps integration