@@ -59,7 +59,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
     <th>Nat.</th>
    </tr>
     <!-- ###TEAM_PLAYER### begin -->
-   <tr class="cfcleaguefe-teamview-player">
+   <tr class="cfcleaguefe-teamview-player cfcleague-row###TEAM_PLAYER_ROLL### ">
     <td>###TEAM_PLAYER_FIRSTPICTURE###<br />###TEAM_PLAYER_TNPICTURE###</td>
     <td>###TEAM_PLAYER_TNPOSITION### / ###TEAM_PLAYER_TNTRIKOT###</td>
     <td>###TEAM_PLAYER_SHOWPROFILELINK######TEAM_PLAYER_LAST_NAME###, ###TEAM_PLAYER_FIRST_NAME######TEAM_PLAYER_SHOWPROFILELINK### (###TEAM_PLAYER_UID###)</td>
